<resources>
    <string name="app_name">Perpustakaan Digital</string>
    <string name="default_web_client_id">138541810398-ph5a6f90lushkkbtk57dg33cc2etks9f.apps.googleusercontent.com</string>
    <string name="facebook_app_id">558352346963562</string>
    <string name="fb_login_protocol_scheme">fb558352346963562</string>
    <string name="facebook_client_token">6b62729ff75a18013b1b47573d860e33</string>

    <string name="queue_count">%d antrian</string>
    <string name="available_count">%d tersedia</string>
    <string name="dialog_antri_title">Berhasil mendaftar antrian!</string>
    <string name="dialog_antri_message">Anda telah berhasil mendaftar antrian untuk buku ini.</string>
    <string name="dialog_ok">OK</string>
    <string name="button_antri">Antri</string>
    <string name="button_pinjam">Pinjam</string>
    <string name="button_baca">Baca</string>
    <string name="bookmarked">Bookmarked!</string>
    <string name="added_to_favorites">Ditambahkan ke favorit!</string>
    <string name="added_to_queue">Ditambahkan ke antrian!</string>
    <string name="added_to_borrow">Ditambahkan ke pinjam!</string>
    <string name="book_not_available">Buku belum bisa dibaca!</string>
    <string name="author_prefix">%s</string>
    <string name="book_not_found">Buku tidak ditemukan!</string>
    <string name="book_not_found_null">Id buku tidak boleh kosong!</string>
    <string name="file_not_found">File tidak ditemukan!</string>
    <string name="error_decode_file">Error decode file</string>
    <string name="error_load_image">Error load image</string>

    <string name="detail_book_title">Detail Buku</string>
    <string name="book_title">Judul Buku</string>
    <string name="book_author">Penulis Buku</string>
    <string name="queue_count_default">251 antrian</string>
    <string name="available_count_default">0 tersedia</string>
    <string name="book_synopsis">Sinopsis buku di sini...</string>

    <string name="search_book_hint">Cari buku...</string>
    <string name="search_user_hint">Cari user...</string>
    <string name="continue_reading_label">Lanjutkan Membaca</string>
    <string name="see_all">Selengkapnya</string>
    <string name="new_books_label">Terbaru</string>
    <string name="recommendation_label">Rekomendasi</string>
    <string name="profile_name">Evinda Apriliani</string>
    <string name="profile_bio">Membaca adalah jendela dunia.</string>
    <string name="stats_baca">21\nBaca</string>
    <string name="stats_following">120\nFollowing</string>
    <string name="stats_followers">300\nFollowers</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="share_profile_button">Share Profile</string>
    <string name="post_button">Post</string>
    <string name="create_collection_button">+ Buat Koleksi</string>

    <string name="search_feature_not_available">Fitur pencarian belum tersedia!</string>
    <string name="create_collection_feature_not_available">Fitur buat koleksi belum tersedia!</string>
    <string name="edit_profile_not_available">Fitur edit profile belum tersedia!</string>
    <string name="share_profile_not_available">Fitur share profile belum tersedia!</string>
    <string name="post_feature_not_available">Fitur post belum tersedia!</string>
    <string name="follow_feature_not_available">Fitur follow belum tersedia!</string>

    <string name="page_number">%1$d dari %2$d</string>
    <string name="book_content_not_found">Konten buku tidak ditemukan.</string>
    <string name="book_content_not_available">Konten buku tidak tersedia.</string>

</resources>