<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_book_hint"
        android:background="@drawable/input_border"
        android:padding="10dp"
        android:fontFamily="@font/quicksand_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile_image"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_account"
        app:layout_constraintTop_toTopOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="@id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <TextView
                android:id="@+id/continue_reading_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/continue_reading_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/continue_reading_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/continue_reading_label"
                app:layout_constraintBottom_toBottomOf="@id/continue_reading_label"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/continue_reading_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/continue_reading_label" />

            <TextView
                android:id="@+id/new_books_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_books_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/continue_reading_recycler"/>

            <TextView
                android:id="@+id/new_books_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/new_books_label"
                app:layout_constraintBottom_toBottomOf="@id/new_books_label"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_books_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_books_label"
                />

            <TextView
                android:id="@+id/recommendation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recommendation_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_books_recycler"/>

            <TextView
                android:id="@+id/recommendation_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/green"
                android:fontFamily="@font/quicksand_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/recommendation_label"
                app:layout_constraintBottom_toBottomOf="@id/recommendation_label"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendation_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recommendation_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>